Fix syntax errors in messages array

--- a/index.html
+++ b/index.html
@@ -234,9 +234,10 @@
     <script>
         const messages = [
             "My love",
-            "I love you",
+            "My Sponsor".
+            "My Sunshine",
             "Thank you",
-            "Would you be my valentine?"
+            "I love you"
         ];
         const images = [
             "/P1.JPG",
